crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__lists__list-comparison.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/lists/list-comparison
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Hey, my name is Philippe. What about yours?\n" [Continue]
> "I am Andre and I need my rheumatism pills!\n" [Continue]
> "Would you like me, Philippe, to get some more for you?\n" [Ended]
outcome: Ended
