crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__lists__list-save-load.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/lists/list-save-load
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "a, x, c\n" [Done]
outcome: Done
